--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interactive Portfolio | Creative Developer</title>
+    <title>Muhammad Uzair</title>
     <meta name="description" content="Interactive portfolio showcasing creative development, innovative projects, and technical expertise" />
     <meta name="author" content="Your Name" />
 
