--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta name="description" content="Interactive portfolio showcasing creative development, innovative projects, and technical expertise" />
     <meta name="author" content="Your Name" />
 
+    <!-- Prevent favicon requests -->
+    <link rel="icon" href="data:,">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Muhammad Uzair" />
+    <meta property="og:title" content="Interactive Portfolio | Creative Developer" />
     <meta property="og:description" content="Interactive portfolio showcasing creative development, innovative projects, and technical expertise" />
-    
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
